--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery.js"></script>
     <script src="js/scripts.js"></script>
-    <title>Places you have ben</title>
+    <title>Places you have been</title>
   </head>
   <body>
     <div class="container">
